# Accounting_balance

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  requirements.txt  tree.txt
backend/: Makefile  manage.py  pyproject.toml
backend/auth/: serializers.py  urls.py  views.py
backend/cart/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
backend/cart/migrations/: 0001_initial.py  0002_cart_status_alter_cart_user_alter_cartitem_cart_and_more.py  0003_cart_created_at_cart_finished_at_cart_moderator.py  0004_cart_formed_at.py
backend/pages/: apps.py  urls.py  views.py
backend/product_components/: admin.py  apps.py  models.py  serializers.py
backend/product_components/migrations/: 0001_initial.py
backend/products/: admin.py  apps.py  enums.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_alter_product_status.py  0003_alter_product_image_alter_product_status.py  0004_remove_product_status.py  0005_alter_product_image.py
backend/templates/: base.html
backend/templates/errors/: 404.html
backend/templates/includes/: cart_icon.html  header.html  paginator.html  product_card.html
backend/templates/pages/: cart.html  index.html  product_detail.html
backend/templates/registration/: login.html
backend/web_shop/: asgi.py  perms.py  settings.py  urls.py  wsgi.py
infra/: docker-compose.yml
public/: index.html
src/: App.css  App.test.tsx  App.tsx  ServiceCard.css  index.tsx
src-tauri/: tauri.conf.json
src/app/: store.ts
src/utils/: api.ts
(+11 files in other folders)
